<resources>
    <string name="app_name">Crypto</string>
    <string name="toolbar_title">rypto</string>
    <string name="count_list">(%d)</string>
    <string name="label_result">Resultado</string>
    <string name="label_last_update">Última actualización: %s</string>
    <string name="label_asks">Oferta</string>
    <string name="label_bids">Demanda</string>
    <string name="label_book">Libro</string>
    <string name="label_amount">Cantidad</string>
    <string name="label_price">Precio</string>
    <string name="label_end_list_message">Hás llegado al final de la lista</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_accept">Aceptar</string>
    <string name="error_title_default">!Oh, vaya¡ parece que ocurrió un error</string>
    <string name="error_body_default_load_data">Por el momento no podemos obtener los datos.</string>
    <string name="label_retry">Reintentar</string>
    <string name="message_not_load_data">No se encontro el contennido</string>
    <string name="label_reload">Volver a cargar</string>
    <string name="connection_on">Estas conectado a internet.</string>
    <string name="connection_off">No tienes conexión a internet.</string>

    <string name="label_volume">Volumen: %s</string>
    <string name="label_price_with_currency">Precio: %s %s</string>
    <string name="label_high">Precio más alto en las ultimas 24 hrs:</string>
    <string name="label_low">Precio más bajo en las ultimas 24 hrs:</string>
    <string name="label_ask">Venta más baja:</string>
    <string name="label_bid">Compra más alta:</string>
    <string name="last_24_hrs_prices">Precios las últimas 24 horas (en %s):</string>
    <string name="label_buys">Precios (en %s):</string>
</resources>