<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/spacing_medium"
        android:background="@drawable/bg_def">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_error_image"
            android:layout_width="@dimen/size_image_long"
            android:layout_height="@dimen/size_image_long"
            android:src="@drawable/img_error"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/text_subtitle"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_error_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/label_end_list_message"
            android:textAlignment="center"
            android:textAppearance="@style/text_body"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:textAppearance="@style/text_subtitle"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/tv_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_body"
            app:layout_constraintEnd_toStartOf="@+id/btn_positive"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/label_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:textAppearance="@style/text_subtitle"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_negative"
            app:layout_constraintTop_toBottomOf="@id/tv_body"
            tools:ignore="TextContrastCheck"
            android:text="@string/label_retry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>