<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cryptocurrencyDetails.CryptocurrencyDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:clickable="false"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="@dimen/spacing_medium"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_crypto_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/view_circle_separator"
                app:layout_constraintBottom_toBottomOf="@+id/volume"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                tools:ignore="ImageContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_title"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_crypto_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck"
                tools:text="Bitcoin" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_subtitle"
                    android:textColor="?attr/colorPrimaryVariant"
                    tools:ignore="TextContrastCheck"
                    tools:text="$12,123,123.98 MXN"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/name"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_body"
                    tools:ignore="TextContrastCheck"
                    tools:text="123344556"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/price"
                    app:layout_constraintTop_toBottomOf="@id/price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toStartOf="@id/ask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_crypto_image"
                android:layout_marginTop="@dimen/spacing_small"
                android:alpha="@dimen/emphasis_medium"
                android:text="@string/label_ask" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_ask"
                app:layout_constraintTop_toTopOf="@+id/label_ask"
                tools:text="234.31349615" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_bid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toStartOf="@id/bid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_ask"
                android:text="@string/label_bid"
                android:alpha="@dimen/emphasis_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_bid"
                app:layout_constraintTop_toTopOf="@+id/label_bid"
                tools:text="22.31349615" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toStartOf="@id/high"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_bid"
                android:layout_marginTop="@dimen/spacing_small"
                android:alpha="@dimen/emphasis_medium"
                android:text="@string/label_high" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_high"
                app:layout_constraintTop_toTopOf="@+id/label_high"
                tools:text="22.31349615" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toStartOf="@id/low"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_high"
                android:text="@string/label_low"
                android:alpha="@dimen/emphasis_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textAppearance="@style/text_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_low"
                app:layout_constraintTop_toTopOf="@+id/label_low"
                tools:text="22.31349615" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_update_at"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="@dimen/emphasis_medium"
                android:textAppearance="@style/text_body"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_low"
                tools:ignore="TextContrastCheck"
                tools:text="@string/label_last_update" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/rg_asks_bids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_asks"
            style="@style/radio_asks_bids"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/radio_button_height"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:checked="true"
            android:text="@string/label_asks"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_bids"
            style="@style/radio_asks_bids"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/radio_button_height"
            android:checked="false"
            android:text="@string/label_bids"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </RadioGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:alpha="@dimen/emphasis_medium"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_extra_small"
        android:paddingTop="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_asks_bids">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_book"
            android:textAppearance="@style/text_body"
            android:textColor="?attr/colorOnSecondary"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_small"
            android:layout_weight="1"
            android:text="@string/label_amount"
            android:textAlignment="center"
            android:textAppearance="@style/text_body"
            android:textColor="?attr/colorOnSecondary"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/label_price"
            android:textAlignment="textEnd"
            android:textAppearance="@style/text_body"
            android:textColor="?attr/colorOnSecondary"
            tools:ignore="TextContrastCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/header_list_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:alpha="@dimen/emphasis_low"
        android:background="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@id/header_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_asks_bids"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_list_divider"
        tools:itemCount="10"
        tools:listitem="@layout/item_asks_bids" />

    <include
        android:id="@+id/message_not_found"
        layout="@layout/view_not_found"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_list_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>